<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white"
    android:padding="20dp"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/lin_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_heading_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineHeight="30dp"
                    android:text="@string/loginPage_heading_title"
                    android:textFontWeight="500"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_heading_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loginPage_heading_subtitle"
                    android:textColor="@color/gray_primary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_login_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/loginPage_login_title" />

                <EditText
                    android:id="@+id/et_login"
                    style="@style/editTextDefault"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingTop="14dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="14dp"
                    android:ems="10"
                    android:hint="@string/loginPage_login_hint"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/tv_login_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/loginPage_login_error"
                    android:textColor="@color/error_primary"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_password_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/loginPage_password_title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    app:hintEnabled="false"
                    app:passwordToggleDrawable="@drawable/ic_eye_selector"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/text_primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:hint="@string/loginPage_password_hint"
                        style="@style/editTextDefault"
                        android:paddingTop="14dp"
                        android:paddingBottom="14dp"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:ems="5"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_password_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/loginPage_password_error"
                    android:textColor="@color/error_primary"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:enabled="false"
            android:onClick="goToProfile"
            android:text="@string/loginPage_btn_login" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>